# analog-keyboard-humanizer-pico

./: CMakeLists.txt
.github/workflows/: build.yml
src/: README.md  build.yml  humanizer.c  humanizer.h  main.c  pico_sdk_import.cmake  storage.c  storage.h  tusb_config.h  usb_descriptors.c  usb_host.c  usb_host.h  xinput_device.c  xinput_device.h
